--- a/assets/css/appResume/premium/templates/_colors.scss
+++ b/assets/css/appResume/premium/templates/_colors.scss
@@ -107,6 +107,21 @@
                     background-color:$color;
                 }
             }
+            &[data-mode="editing"]{
+                .editing-text:after {
+                    border-color:$color;
+                }
+            }
+            .menu {
+                input {
+                    &:focus {
+                        box-shadow:0 0 0 1px $color, 0 12px 20px -10px rgba($color, 0.28), 0 4px 20px 0px rgba(0, 0, 0, 0.12), 0 7px 8px -5px rgba($color, 0.2);
+                    }
+                }
+                .checkbox-control:before {
+                    background-color:$color;
+                }
+            }
         }
     }
 }
