--- a/assets/css/ui/basic/_input.scss
+++ b/assets/css/ui/basic/_input.scss
@@ -1,7 +1,7 @@
 .input {
-    @extend .fontFamily-roboto;
+    @extend .fontFamily-helvetica;
     @extend .c-black;
-    @extend .fontWeight-3;
+    @extend .fontWeight-normal;
     @extend .border-none;
     @extend .borderRadius-m;
     @extend .w100p;
@@ -38,7 +38,7 @@
     &-error:hover,
     &-error:focus {
         box-shadow:inset 0 0 0 1px $red;
-    }    
+    }
     &-icon {
         @extend .pos-tl;
         @extend .flex-centered;
@@ -70,25 +70,25 @@
     }
     &-xl {
         min-width:60px;
-        font-size:18px;
+        font-size:20px;
         height:60px;
         padding:0 20px;
     }
     &-l {
         min-width:50px;
-        font-size:16px;
+        font-size:18px;
         height:50px;
         padding:0 16px;
     }
     &-m {
         min-width:40px;
-        font-size:16px;
+        font-size:18px;
         height:40px;
         padding:0 14px;
     }
     &-s {
         min-width:30px;
-        font-size:14px;
+        font-size:16px;
         height:30px;
         padding:0 10px;
         @extend .borderRadius-xs;
