--- a/assets/templates/appResume/premium/editable/editableLanguages.html
+++ b/assets/templates/appResume/premium/editable/editableLanguages.html
@@ -1,8 +1,8 @@
-<editable-languages class="col-sm-24 col-md-offset-1 col-md-22 col-lg-offset-4 col-lg-18 section__editable__container" data-editing="languages">
+<editable-languages class="col-sm-24 col-md-22 col-lg-18 centered section__editable__container" data-editing="languages">
 
     <ui-switcher id="activity" commit="true"></ui-switcher>
 
-    <div class="section__editable__content { hide : !switcher.value }">
+    <div class="section__editable__content col-lg-offset-1 { hide : !switcher.value }">
 
         <div class="title title-main">{ title }</div>
 
