--- a/assets/templates/appResume/premium/editable/editableSkills.html
+++ b/assets/templates/appResume/premium/editable/editableSkills.html
@@ -1,8 +1,8 @@
-<editable-skills class="col-sm-24 col-md-offset-1 col-md-22 col-lg-offset-4 col-lg-18 section__editable__container" data-editing="skills">
+<editable-skills class="col-sm-24 col-md-22 col-lg-20 centered section__editable__container" data-editing="skills">
 
     <ui-switcher id="activity" commit="true"></ui-switcher>
 
-    <div class="section__editable__content { hide : !switcher.value }">
+    <div class="section__editable__content col-lg-offset-2 { hide : !switcher.value }">
 
         <div class="title title-main">{ title }</div>
 
@@ -47,7 +47,7 @@
 
     </div>
 
-    <div class="section__editable__footer text-center">
+    <div class="section__editable__footer text-center col-lg-offset-1">
         <button onClick={ $Editable.component.onCancel } class="btn btn-{ app.device.isPhone ? 'l' : 'xl' } btn-upper" type="button">Отменить</button>
         <button onClick={ $Editable.component.onSave } class="btn btn-{ app.device.isPhone ? 'l' : 'xl' } btn-upper ml-xs" type="button">Сохранить</button>
     </div>
