--- a/assets/css/appResume/premium/control/_colors.scss
+++ b/assets/css/appResume/premium/control/_colors.scss
@@ -11,7 +11,7 @@
     overflow:hidden;
     padding-right:20px;
     transition:width 0s 0.4s, height 0s 0.4s;
-    z-index:100;
+    @extend .zIndex-5;
 
     .d-phone & {
         top:90px;
