--- a/assets/css/ui/_icons.scss
+++ b/assets/css/ui/_icons.scss
@@ -4,7 +4,7 @@
     pencil, pencil_white, menu, menu_white, menu2_white, menu_lime, remove_fill_white,
     upload_white, video_white, images_white, link_white, more_h, more_v, more_v_white,
     back, back_white, back_lime, help, close_fill, close_fill_gray, close_fill_white, arrow_curved_white,
-    info_white, check, check_black, check_white, check_gray, check_muted, edit,
+    info_white, check, check_black, check_white, check_gray, check_muted, check_circle_lime, edit,
     edit_white, share, share_white, hand_cursor_white, repeat
 ){
     .ui-icon-#{$icon} {
