--- a/assets/css/ui/basic/_select.scss
+++ b/assets/css/ui/basic/_select.scss
@@ -6,9 +6,9 @@
 
     select {
         @extend .display-block;
-        @extend .fontFamily-roboto;
+        @extend .fontFamily-helvetica;
         @extend .c-black;
-        @extend .fontWeight-3;
+        @extend .fontWeight-normal;
         @extend .border-none;
         @extend .borderRadius-m;
         @extend .cursor-pointer;
@@ -60,7 +60,7 @@
     }
     &-xl {
         select {
-            font-size:18px;
+            font-size:20px;
             height:60px;
             line-height:60px;
             padding:0 60px 0 20px;
@@ -84,7 +84,7 @@
     }
     &-l {
         select {
-            font-size:16px;
+            font-size:18px;
             height:50px;
             line-height:50px;
             padding:0 50px 0 16px;
@@ -99,7 +99,7 @@
     }
     &-m {
         select {
-            font-size:16px;
+            font-size:18px;
             height:40px;
             line-height:40px;
             padding:0 40px 0 12px;
@@ -114,7 +114,7 @@
     }
     &-s {
         select {
-            font-size:14px;
+            font-size:16px;
             height:30px;
             line-height:30px;
             padding:0 30px 0 10px;
