--- a/assets/templates/appResume/premium/components/courses.html
+++ b/assets/templates/appResume/premium/components/courses.html
@@ -4,12 +4,12 @@
 
     <btn-editable if={ $State.get('mode') === "editing" } data={ $resume.courses }></btn-editable>
 
-    <div onClick={ openEditable } onUpdate="none" class="{ blur : !$resume.courses } { transition-none : editable }">
+    <div onClick={ openEditable } onUpdate="none" class="{ blur : !$resume.courses }">
 
-        <p if={ !$resume.courses || $resume.courses && $resume.courses.text } class="mb-l">{ $resume.courses && $resume.courses.text ? $resume.courses.text : $store.resume.placeholder.courses.text }</p>
+        <p if={ !$resume.courses || $resume.courses && $resume.courses.text } class="mb-l pos-rel editing editing-text editing-courses-text">{ $resume.courses && $resume.courses.text ? $resume.courses.text : $store.resume.placeholder.courses.text }</p>
 
         <div>
-            <div if={ $resume.courses && $resume.courses.items } each={ item, i in _.sortArray($resume.courses.items, "year", "desc") } class="courses-item mtb-xl" data-id={ item._id }>
+            <div if={ $resume.courses && $resume.courses.items } each={ item, i in _.sortArray($resume.courses.items, "year", "desc") } class="pos-rel courses-item mtb-xl editing editing-text editing-courses-item" data-id={ item._id }>
 
                 <h3 class="c-primary mb-s"><strong>{ item.year }</strong> &ndash; { item.name }</h3>
 
