--- a/assets/templates/appResume/premium/components/jobs.html
+++ b/assets/templates/appResume/premium/components/jobs.html
@@ -8,10 +8,10 @@
 
                 <h3 class="title">{ $resume.jobs && $resume.jobs.title ? $resume.jobs.title : opts.title }</h3>
 
-                <div if={ !$resume.jobs || $resume.jobs && $resume.jobs.text } onClick={ openEditable } onUpdate="none" class="{ blur : !$resume.jobs } { transition-none : editable }">
+                <div if={ !$resume.jobs || $resume.jobs && $resume.jobs.text } onClick={ openEditable } onUpdate="none" class="{ blur : !$resume.jobs }">
                     <div class="row mb-l">
                         <div class="col-xs-24 pb-xs">
-                            <p>{ $resume.jobs && $resume.jobs.text ? $resume.jobs.text : $store.resume.placeholder.jobs.text }</p>
+                            <p class="editing editing-text editing-jobs-text">{ $resume.jobs && $resume.jobs.text ? $resume.jobs.text : $store.resume.placeholder.jobs.text }</p>
                         </div>
                     </div>
                 </div>
@@ -28,7 +28,7 @@
                         <button class="btn btn-xl btn-editable btn-white btn-upper" type="button"><svg class="btn-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125" enable-background="new 0 0 100 100" xml:space="preserve"><path class="btn-svg-color" d="M87.754,45.284H54.716V12.246c0-2.605-2.111-4.716-4.716-4.716c-1.302,0-2.481,0.528-3.334,1.382 c-0.853,0.853-1.381,2.032-1.382,3.334v33.038l-33.038,0c-1.302,0-2.481,0.528-3.334,1.382C8.058,47.519,7.53,48.698,7.53,50 c0,2.605,2.111,4.716,4.716,4.716l33.038,0l0,33.038c0,2.605,2.111,4.716,4.716,4.716c2.604,0,4.716-2.112,4.716-4.716l0-33.038 h33.038c2.604,0,4.716-2.112,4.716-4.716C92.47,47.395,90.359,45.284,87.754,45.284z"></path></svg>Добавить место работы</button>
                     </div>
                 </div>
-                <div each={ item in sort($resume.jobs.items) } class="jobs-item" data-id={ item._id }>
+                <div each={ item in sort($resume.jobs.items) } class="jobs-item editing editing-jobs-item" data-id={ item._id }>
                     <div class="row pl-m pt-xxs sm-pl0">
                         <div class="col-md-14">
                             <h3 class="job-title">{ item.post }</h3>
