--- a/assets/templates/appResume/premium/components/languages.html
+++ b/assets/templates/appResume/premium/components/languages.html
@@ -4,20 +4,22 @@
 
     <btn-editable if={ $State.get('mode') === "editing" } data={ $resume.languages }></btn-editable>
 
-    <div onClick={ openEditable } onUpdate="none" class="{ blur : !$resume.languages } { transition-none : editable }">
+    <div onClick={ openEditable } onUpdate="none" class="{ blur : !$resume.languages }">
 
         <p if={ !$resume.languages || $resume.languages && $resume.languages.text } class="mb-l">{ $resume.languages && $resume.languages.text ? $resume.languages.text : $store.resume.placeholder.languages.text }</p>
 
         <div class="row">
-            <div each={ item in ($resume.languages && $resume.languages.items ? $resume.languages.items : $store.resume.placeholder.languages.items ) } no-reorder class="col-xs-24 col-sm-24 col-md-12">
-                <h3 class="{ 'c-primary' : item.title == 'native' } mb-l">{ $store.languages.getTitleById(item.title) }<span class="plr-xs">&ndash;</span>
-                    <strong if={ item.title == "native" }>
-                        { $store.languages.native.getTitleById(item.value) }
-                    </strong>
-                    <strong if={ item.title != "native" } class={ 'c-grayDark' : item.value == "1" }>
-                        { $store.languages.select.getTitleById(item.value) }
-                    </strong>
-                </h3>
+            <div class="editing editing-text editing-lang-items">
+                <div each={ item in ($resume.languages && $resume.languages.items ? $resume.languages.items : $store.resume.placeholder.languages.items ) } no-reorder class="col-xs-24 col-sm-24 col-md-12">
+                    <h3 class="{ 'c-primary' : item.title == 'native' } mb-l">{ $store.languages.getTitleById(item.title) }<span class="plr-xs">&ndash;</span>
+                        <strong if={ item.title == "native" }>
+                            { $store.languages.native.getTitleById(item.value) }
+                        </strong>
+                        <strong if={ item.title != "native" } class={ 'c-grayDark' : item.value == "1" }>
+                            { $store.languages.select.getTitleById(item.value) }
+                        </strong>
+                    </h3>
+                </div>
             </div>
         </div>
 
