--- a/assets/templates/appResume/premium/components/works.html
+++ b/assets/templates/appResume/premium/components/works.html
@@ -8,10 +8,10 @@
 
                 <h3 class="title">{ $resume.works && $resume.works.title ? $resume.works.title : $store.resume.placeholder.works.title }</h3>
 
-                <div if={ !$resume.works || $resume.works && $resume.works.text } onClick={ openEditable } onUpdate="none" class="{ blur : !$resume.works } { transition-none : editable }">
+                <div if={ !$resume.works || $resume.works && $resume.works.text } onClick={ openEditable } onUpdate="none" class="{ blur : !$resume.works }">
                     <div class="row mb-l">
                         <div class="col-xs-24 pb-xs">
-                            <p>{ $resume.works && $resume.works.text ? $resume.works.text : $store.resume.placeholder.works.text }</p>
+                            <p class="editing editing-text editing-works-text">{ $resume.works && $resume.works.text ? $resume.works.text : $store.resume.placeholder.works.text }</p>
                         </div>
                     </div>
                 </div>
@@ -29,7 +29,7 @@
                             <button class="btn btn-xl btn-editable btn-white btn-upper" type="button"><svg class="btn-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125" enable-background="new 0 0 100 100" xml:space="preserve"><path class="btn-svg-color" d="M87.754,45.284H54.716V12.246c0-2.605-2.111-4.716-4.716-4.716c-1.302,0-2.481,0.528-3.334,1.382 c-0.853,0.853-1.381,2.032-1.382,3.334v33.038l-33.038,0c-1.302,0-2.481,0.528-3.334,1.382C8.058,47.519,7.53,48.698,7.53,50 c0,2.605,2.111,4.716,4.716,4.716l33.038,0l0,33.038c0,2.605,2.111,4.716,4.716,4.716c2.604,0,4.716-2.112,4.716-4.716l0-33.038 h33.038c2.604,0,4.716-2.112,4.716-4.716C92.47,47.395,90.359,45.284,87.754,45.284z"></path></svg>Добавить проекты</button>
                         </div>
                     </div>
-                    <div each={ item, i in _.sortArray($resume.works.items, "year", "desc") } class="works-item col-md-12" data-id={ item._id }>
+                    <div each={ item, i in _.sortArray($resume.works.items, "year", "desc") } class="works-item col-md-12 editing editing-works-item" data-id={ item._id }>
                         <div class="work-num hidden-xs">{ i < 9 ? '0' + ( i + 1 ) : i + 1 }.</div>
                         <div class="row">
                             <div if={ isYears() } class="col-md-4">
